--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@cloudflare/workers-types": "^4.20250603.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/adapter-cloudflare": "^7.0.3",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-cloudflare": "^7.2.4",
+		"@sveltejs/kit": "^2.44.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"eslint": "^9.18.0",
@@ -35,5 +35,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"overrides": {
+		"cookie": "^0.7.0"
 	}
 }
